--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
     "tslib": "^2.3.1",
     "typescript": "~4.5.4"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@netlify/functions": "^1.0.0",
+    "fuse.js": "^6.5.3"
+  }
 }
